<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhiyi.ukafu.MainActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/main_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/action_to_privileges"
                android:textOff="@string/textOff"
                android:textOn="@string/textOn" />

            <Switch
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/action_to_open"
                android:textOff="@string/textOff"
                android:textOn="@string/textOn" />

            <Switch
                android:id="@+id/smsservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/action_to_sms"
                android:textOff="@string/textOff"
                android:textOn="@string/textOn" />

            <Switch
                android:id="@+id/mute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/action_to_mute"
                android:textOff="@string/textOff"
                android:textOn="@string/textOn" />

            <LinearLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_web"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/action_to_web"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4sp"
                android:text="
使用帮助:
1 开启服务权限;
2 上传二维码;
3 打开微信/支付宝的收款通知,(语音播报);
4 设置APP权限,自启动,允许后台运行,黑屏不断网,省电模式下白名单 等,总之.让APP能一直联网,不被系统杀死"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView_Help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4sp"
                android:text="
                更多帮助"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4sp"
                android:text="版本："
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
