<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/text_view_notice_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_notice_uri" />
        <AutoCompleteTextView
            android:id="@+id/ac_textView_notice_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_toRightOf="@id/text_view_notice_uri"/>
        <TextView
            android:id="@+id/text_view_appid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_appid" />
        <AutoCompleteTextView
            android:id="@+id/ac_text_appid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_toRightOf="@id/text_view_notice_uri"/>
        <TextView
            android:id="@+id/text_view_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_secret" />
        <AutoCompleteTextView
            android:id="@+id/ac_text_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_toRightOf="@id/text_view_notice_uri"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="复制APPID"
            android:visibility="visible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>